samples/_failures_safe/1761470203_2f666a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_935f95ea.c: In function ‘main’:
./samples/SAFE/__tmp_935f95ea.c:160:9: error: expected expression at end of input
  160 |         if (*(input_data + i) != *(decompressed.data +
      |         ^~
./samples/SAFE/__tmp_935f95ea.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_935f95ea.c:160:9: error: expected declaration or statement at end of input
